# databricks-data-engineering

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
coursera-assets/coursera/: 1-roleplay.md  1.1-reflection.md  1.1.1-key-terms.md  1.2-reflection.md  1.2.1-key-terms.md  1.3-reflection.md  1.3.1-key-terms.md  2-roleplay.md  2.1-reflection.md  2.1.1-key-terms.md  2.2-reflection.md  2.2.1-key-terms.md  2.3-reflection.md  2.3.1-key-terms.md  3-roleplay.md  3.1-reflection.md  3.1.1-key-terms.md  3.2-reflection.md  3.2.1-key-terms.md  coursepage-prompt.md  coursera-score.json  key-terms-prompt.md  outline-reading.md  outline.md  reflection-prompt.md
data/: 2024-01-15.csv  2024-01-16.csv
docs/: capstone-project.md  outline.md
examples/: README.md
examples/dlt-basics/: my_transformation.sql
examples/simple-pipeline/: bronze.py  gold_by_region.py
examples/streaming/: streaming_transformation.py
examples/wine-pricing-inventory/: bronze.py  gold.py  silver.py
labs/: lab-1.md  lab-2.md  lab-3.md  lab-4.md  lab-5.md  lab-6.md
